[metadata]
name = Potter
version = attr: potter.__version__
description = Python-Operated Tools for TOPAS Exploration + Research
url = https://github.com/joefowler/Potter
author = "Joe Fowler, Nathan Nakamura"
author_email = joe.fowler@nist.gov
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
packages =
    Potter
# package_dir
install_requires =
    numpy>=1.11
# scripts =

[autopep8]
max-line-length = 135
exclude = build,nonstandard,*_form_ui.py

[pycodestyle]
max-line-length = 135
exclude = build,nonstandard,*_form_ui.py
